# rust-template

./: .clippy.toml  .editorconfig  .env.example  .gitattributes  .gitignore  .rustfmt.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.claude/: settings.json
.claude/rules/: branching.md  code-standards.md  commits-and-issues.md  continuous-improvement.md
.github/: dependabot.yml
.github/workflows/: ci.yml  secure_workflows.yml
crates/: README.md
docs/: architecture.md  ci-cd.md  crypto.md  database.md  dsql.md  migrations.md  sea-query.md  web-ui.md
